mobile white space fix

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 
-html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
+* {
+    outline: 1px solid red;
+}
+html,
+body {
+    height: -webkit-fill-available;
 }
 
+.s-intro {
+    min-height: -webkit-fill-available;
+}
 body {
     margin: 0;
 }
@@ -36,6 +42,8 @@ body {
     height: 100%;
     margin: 0;
     overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
     /* Prevent scrolling */
 }
 
@@ -49,15 +57,11 @@ img {
  *
  * ------------------------------------------------------------------- */
 .s-intro {
-    background-color: black;
-    width: 100%;
-    height: calc(var(--vh) * 100);
-    /* Ensure the section covers the full viewport height */
+    min-height: calc(var(--vh, 1vh) * 100);
+    height: 100%;
     overflow: hidden;
-    /* Prevent scrolling within the section */
     position: relative;
 }
-
 /* --------------------------------------------------------------------
  * ## intro background
  * -------------------------------------------------------------------- */
